# aze

./: Cargo.toml  README.md
.github/workflows/: deploy.yaml  rust.yaml
migrations/2022-08-12-124559_initial/: down.sql  up.sql
src/: commands.rs  config.rs  display.rs  lib.rs  main.rs  models.rs  schema.rs
src/cli/: mod.rs
src/commands/: add.rs  edit.rs  frames.rs  log.rs  projects.rs  remove.rs  start.rs  status.rs  stop.rs
src/database/: mod.rs
src/display/: frame.rs  mod.rs
src/service/: frame.rs  mod.rs  project.rs  tags.rs
tests/: cli.rs
tests/commands/: add.rs  edit.rs  frames.rs  log.rs  mod.rs  projects.rs  remove.rs  start.rs  status.rs  stop.rs
tests/commands/log/: mod.rs  project.rs  tags.rs  time_filter.rs
