[package]
name = "aze"
version = "0.1.2"
authors = ["Kevin Studer <kreemer@me.com>"]
license = "MIT OR Apache-2.0"
description = "A time tracking tool heavenly inspired by watson"
readme = "README.md"
homepage = "https://github.com/kreemer/aze"
repository = "https://github.com/kreemer/aze"
keywords = ["cli", "timetracking", "time"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
confy = "0.4"
chrono = {version = "0.4", features = [ "serde" ]}
uuid = { version = "1.1.2", features = ["serde", "v4"] }
thiserror = "1.0.32"
anyhow = "1.0.61"
diesel = { version = "2.0.0", features = ["sqlite", "chrono", "uuid", "r2d2"] }
dialoguer = "0.10.2"
serde_json = "1.0.85"
colored = "2.0.0"
directories-next = "2.0.0"
diesel_migrations = { version = "2.0.0", features = ["sqlite"]}
regex = "1.6.0"
edit = "0.1.4"
libsqlite3-sys = { version = ">=0.17.2, <0.26.0", features = ["bundled"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
rand = "0.8.5"
tempfile = "3.3.0"
